# pytest-annotated

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest_annotated.py  run_checks
.github/workflows/: main.yml
src/pytest_annotated/: builtins.py
tests/: conftest.py  random_module.py  test_annotated.py
